vm/src/snapshots/stak_vm__vm__tests__create_list-2.snap
---
source: vm/src/vm.rs
expression: vm
---
program counter: ():0
stack: ():0
00: #f:0 #f:0
02: c0:0 #f:0 <- cons
04: n1 ():0
06: n2 c4:0

