vm/src/snapshots/stak_vm__vm__tests__create_list-3.snap
---
source: vm/src/vm.rs
expression: vm
---
program counter: moved:0
stack: moved:0
00: c0:0 moved:1
02: c0:0 moved:2
04: c0:0 c2:2
06: n1 c0:0
08: n2 c6:0
0a: n3 c8:0

