vm/src/snapshots/stak_vm__vm__tests__create_list.snap
---
source: vm/src/vm.rs
expression: vm
---
program counter: !:0
stack: !:0
00: !:1 n0
02: c0:2 n0
04: c2:2 c0:0
06: n1 c0:0

