vm/src/snapshots/stak_vm__vm__tests__run_nothing_after_garbage_collection.snap
---
source: vm/src/vm.rs
expression: vm
---
program counter: c100:0
stack: c100:0
100: c100:0 moved:1 <- program counter
102: c100:0 c104:2
104: c100:0 moved:2

